--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,11 @@ github_username:  tseth4
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
+
+
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
